<resources>
    <string name="app_name">微光小站志愿者平台</string>
    <string name="login_title">登录</string>
    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="login_button">登录</string>
    <string name="no_account_prompt">还没有账号？</string>
    <string name="register_link">注册</string>

    <!-- 注册页面字符串 -->
    <string name="register_title">注册</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="role_selection_label">选择角色</string>
    <string name="student_role">学生</string>
    <string name="teacher_role">教师</string>
    <string name="admin_role">管理员</string>
    <string name="register_button">注册</string>
    <string name="already_have_account">已有账号？</string>
    <string name="login_link">登录</string>
</resources>